--- a/01-Estadistica_Descriptiva.ipynb
+++ b/01-Estadistica_Descriptiva.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a href=\"https://colab.research.google.com/github/alfonsocude/Probability/blob/main/probability.ipynb#scrollTo=coBkmExsL-xx\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
+    "<a href=\"https://colab.research.google.com/github/alfonsocude/Probability/blob/main/01-Estadistica_Descriptiva.ipynb#scrollTo=bCcq_rENpiJX\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
     "\n",
     "\n",
     "**Recuerda que una vez abierto, Da clic en \"Copiar en Drive\", de lo contrario no podras almancenar tu progreso**\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
