--- a/02-Probabilidad.ipynb
+++ b/02-Probabilidad.ipynb
@@ -365,10 +365,10 @@
     "1. Sea $ E=\\{ a,b,c,\\dots,x,y,z \\} $ el conjunto de las 26 letras del alfabeto español. Hallar el número de 5 letras que pueden formarse de $ E $ tal que la primera y la última letra sean vocales distintas y el resto tres consonantes diferentes. $\\hspace{0.5cm}$   Resp: 159600.\n",
     "2. ¿Cuántas placas de automóviles de tres letras y tres números se pueden formar?$\\hspace{0.5cm}$ Resp: 17576000\n",
     "3. Sea $ X=\\{ 1,2,3,\\dots,98,99,100 \\} $ y sea\n",
-    "\t\t\t$$\n",
-    "\t\t\t  S=\\{ (a,b,c)\\,/\\, a,b,c\\in X,\\; a<b\\;\\text{y}\\;a<c \\}. \n",
-    "\t\t\t$$\n",
-    "\t\t\tDeterminar la cantidad de elementos tiene $ S $.$\\hspace{0.5cm}$ Resp: 328350."
+    "$$\n",
+    "  S=\\{ (a,b,c)\\,/\\, a,b,c\\in X,\\; a<b\\;\\text{y}\\;a<c \\}. \n",
+    "$$\n",
+    "Determinar la cantidad de elementos tiene $ S $.$\\hspace{0.5cm}$ Resp: 328350."
    ]
   },
   {
