--- a/02-Probabilidad.ipynb
+++ b/02-Probabilidad.ipynb
@@ -351,7 +351,7 @@
    "metadata": {},
    "source": [
     "### **Principio básico de conteo para la multiplicación**\n",
-    "Suponga que un evento $ E $ puede ser descompuesto en $ r $ eventos ordenados $ E_1, E_2,\\dots, E_r $ y que hay $ n_1 $ formas para que el evento $ E_1 $ ocurra, $ n_2 $ formas para que el evento $ E_2 $ ocurra,..., $ n_r $ formas para que el evento $ E_r $ ocurra. Entonces el número total de formas para que el evento $ E $ ocurra está dado por \n",
+    "Suponga que un evento $ E $ puede ser descompuesto en $ r $ eventos ordenados $ E_1, E_2,\\dots, E_k $ y que hay $ n_1 $ formas para que el evento $ E_1 $ ocurra, $ n_2 $ formas para que el evento $ E_2 $ ocurra,..., $ n_k $ formas para que el evento $ E_k $ ocurra. Entonces el número total de formas para que el evento $ E $ ocurra está dado por \n",
     "$$ \n",
     "  n_1n_2\\dots n_k.\n",
     "$$"
@@ -362,7 +362,7 @@
    "metadata": {},
    "source": [
     "### **Ejemplos**\n",
-    "1. Sea $ E=\\{ a,b,c,\\dots,x,y,z \\} $ el conjunto de las 26 letras del alfabeto español. Hallar el número de 5 letras que pueden formarse de $ E $ tal que la primera y la última letra sean vocales distintas y el resto tres consonantes diferentes. $\\hspace{0.5cm}$   Resp: 159600.\n",
+    "1. Sea $ E=\\{ a,b,c,\\dots,x,y,z \\} $ el conjunto de las 26 letras del alfabeto español. Hallar el número de palabras de 5 letras que pueden formarse de $ E $ tal que la primera y la última letra sean vocales distintas y el resto tres consonantes diferentes. $\\hspace{0.5cm}$   Resp: 159600.\n",
     "2. ¿Cuántas placas de automóviles de tres letras y tres números se pueden formar?$\\hspace{0.5cm}$ Resp: 17576000\n",
     "3. Sea $ X=\\{ 1,2,3,\\dots,98,99,100 \\} $ y sea\n",
     "$$\n",
