--- a/03-Parcial_1.ipynb
+++ b/03-Parcial_1.ipynb
@@ -25,13 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "import statistics as stats\n",
     "from collections import Counter"
    ]
   },
@@ -47,14 +48,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Clientes Banco de Alemania**\n",
+    "### **Clientes Banco Alemán**\n",
     "\n",
     "Trabajemos ahora con la base de datos de clientes que han solicitado créditos del banco alemán."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -182,13 +183,14 @@
        "4           4870        24                  car   bad  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "banco = pd.read_csv('local/data/german_credit_data.csv')\n",
+    "#banco = banco.dropna()\n",
     "banco.head()"
    ]
   },
@@ -196,21 +198,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Determine cuáles variables son cualitativas y cuantitativas, las cualitativas clasificarlas en ordinales o nomiles según sea el caso. (onservación: Obviar la variable 'Unnamed: 0')"
+    "1. Determine cuáles variables son cualitativas y cuantitativas, las cualitativas clasificarlas en ordinales o nomiles según sea el caso. (observación: Obviar la variable 'Unnamed: 0')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Realizar la tabla de freuencia para datos desagrupados u agrupados dependiendo de el tipo de variable."
+    "2. Realizar la tabla de frecuencia para datos desagrupados o agrupados dependiendo de el tipo de variable."
    ]
   },
   {
@@ -310,7 +305,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "banco[(banco['Duration'] ...) & (banco[]) ]"
+    "banco[(banco['Duration'] ...) & (banco[...]...) ]"
    ]
   },
   {
