--- a/02-Probabilidad.ipynb
+++ b/02-Probabilidad.ipynb
@@ -465,6 +465,291 @@
     "3. el comité debe incluir por lo menos 3 profesores? Resp: 91\n",
     "4. un profesor particular y un estudiante particular no pueden estar en el mismo comité? Resp: 378"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Probabilidad de un evento**\n",
+    "Si un experimento puede dar como resultado cualquiera de $N$ diferentes resultados que tienen las mismas probabilidades de ocurrir, y si exactamente $n$ de estos resultados corresponden al evento $A$, entonces la probabilidad del evento $A$ es\n",
+    "$$\n",
+    "  P(A)=\\dfrac{n}{N}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Ejemplo**\n",
+    "Hay 7 hombres y 3 mujeres en una fila de un banco. Calcular la probabilidad que\n",
+    "\n",
+    "a. halla un hombre en la parte inicial de la fila.\n",
+    "\n",
+    "b. un hombre y una mujer deben estar en la parte final de la fila.\n",
+    "\n",
+    "c. las tres mujeres deben estar juntas en la fila."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Ejercicios**\n",
+    "1. Las probabilidades son dos a uno de que, cuando A y B juegan tenis, A gane. Suponga que A y B juegan dos partidos. ¿Cuál es la probabilidad de que A gane al menos un partido?\n",
+    "\n",
+    "2. Se carga un dado de forma que exista el doble de probabilidades de que salga un número par que uno impar. Si $E$ es el evento de que ocurra un número menor que 4 en un sólo lanzamiento del dado, calcule $P(E)$. Resp: 4/9.\n",
+    "\n",
+    "3. Continuando con el ejemplo anterior, sea $A$ el evento de que resulte un número par y sea $B$ el evento de que resulte un número divisible entre 3. Calcule $P(A\\cup B)$ y $P(A\\cap B)$. Resp: 7/9 y 2/9.\n",
+    "4. A una clase de estadística asisten 25 estudiantes de ingeniería industrial, 10 de administración, 10 de ingeniería eléctrica y 8 de ingeniería civil. Si el profesor elige al azar a un estudiante para que conteste una pregunta, ¿qué probabilidades hay de que el elegido sea \n",
+    "\n",
+    "     a. estudiante de ingeniería industrial, \n",
+    "\n",
+    "     b. estudiante de ingeniería civil o estudiante de ingeniería eléctrica?\n",
+    "\n",
+    "    Resp: a) 25/53, b) 18/53.\n",
+    "\n",
+    "5. En una mano de póquer que consta de 5 cartas encuentre la probabilidad de tener 2 ases y 3 jotas. Resp: 0.9x$10^{-5}$.\n",
+    "\n",
+    "6. Considere un experimento que consiste en registrar el cumpleaños para cada una de 20 personas seleccionadas al azar. Si no se presta atención a los años bisiestos y se supone que hay sólo 365 cumpleaños distintos posibles, encuentre el número de puntos del espacio muestral $S$ para este experimento. Si suponemos que cada uno de los posibles conjuntos de cumpleaños es igualmente probable, ¿cuál es la probabilidad de que cada persona de las 20 tenga un cumpleaños diferente?, ¿Cuál es la probabilidad de que al menos un par de personas comparta cumpleaños? Resp. 0.5886 y 0.4114.\n",
+    "\n",
+    "7. Una mona ha de demostrar que reconoce los colores al lanzar al aire una bola roja, una negra y una blanca en cajas de los mismos colores respectivamente, una bola por caja. Si la mona no ha aprendido los colores y simplemente lanza una bola en una caja al azar, encuentre la probabilidad de que no haya coincidencias en los colores."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Probabilidad condicional**\n",
+    "**Descripción Preliminar**\n",
+    "\n",
+    "Muchas veces se obtiene información parcial acerca de los eventos aleatorios antes de conocer el resultado final o información apriori. Considerando esta información, se puede cambiar la estructura del espacio muestral. Supongamos que al medir la probabilidad de ocurrencia de un evento se tiene la información que el evento $A$ ya sucedio, para $n$ veces que se repite el evento, tenemos la siguiente expresión:\n",
+    "\n",
+    "$$P(B\\vert A) = \\frac{n(A \\cap B)}{n(A)} = \\frac{\\frac{n(A\\cap B)}{n}}{\\frac{n(A)}{n}}$$\n",
+    "\n",
+    "*Por ejemplo*, se lanza dos dados:\n",
+    "\n",
+    "$$\\Omega = \\lbrace (1,1), (1,2), \\ldots, (6,6)\\rbrace$$\n",
+    "\n",
+    "Como el número de lanzamientos posibles es $n(\\Omega) = 36$, Si $A = $ Evento que la suma sea $7$ sin información apriori:\n",
+    "\n",
+    "$$\\mathbb{P}(A) = \\frac{6}{36} = \\frac{1}{6}$$\n",
+    "\n",
+    "Lo anterior se obtiene si se realiza el siguiente análisis:\n",
+    "\n",
+    "$$1+6 = 7$$\n",
+    "$$6+1 = 7$$\n",
+    "$$3+4 = 7$$\n",
+    "$$4+3 = 7$$\n",
+    "$$5+2 = 7$$\n",
+    "$$2+5 = 7$$\n",
+    "\n",
+    "Obseerven que hay $6$ eventos que suman igual a $7$. \n",
+    "\n",
+    "Ahora supongamos que hay un evento $B$ que dice que sale un $3$ en uno de los dos dados. Inicialmente, se tiene:\n",
+    "\n",
+    "$$\\Omega = \\lbrace (3,1), (3,2), (3,3), (3,4), (3,5), (3,6), (1,3), (2,3), (3,3), (4,3), (5,3), (6,3) \\rbrace$$\n",
+    "\n",
+    "En este caso, $n(\\Omega) = 12$\n",
+    "\n",
+    "Como solo hay dos eventos que al salir un $3$ en uno de los dados, entonces se considera $(3,4)$ y $(4,3)$, y por consiguiente, son $2$ eventos que se presentan. Por consiguiente:\n",
+    "\n",
+    "$$\\mathbb{P}(A\\vert B) = \\frac{n(A\\cap B)}{n(B)} = \\frac{2}{12} = \\frac{1}{6}$$\n",
+    "\n",
+    "Para este caso, $n(B) = n{(\\Omega)}$ y $n(A \\cap B) = 2$. En este cálculo, $\\mathbb{P}(A\\vert B)$ significa que es la probabilidad de un evento $A$ dado que ocurra un evento $B$.\n",
+    "\n",
+    "A partir de estos puntos preliminares, se define el concepto de probabilidad condicional\n",
+    "\n",
+    "\n",
+    "**Definición**\n",
+    "\n",
+    "La **probabilidad condicional** de un evento $A$, dado que un evento $B$ ha ocurrido, es igual a\n",
+    "$$\n",
+    "\\mathbb{P}(A\\vert B) = \\frac{\\mathbb{P}(A \\cap B)}{\\mathbb{P}(B)}\n",
+    "$$\n",
+    "\n",
+    "o en caso contrario:\n",
+    "\n",
+    "$$\\mathbb{P}(B\\vert A) = \\frac{\\mathbb{P}(A \\cap B)}{\\mathbb{P}(A)}$$\n",
+    "\n",
+    "donde $\\mathbb{P}(B) > 0$ y $\\mathbb{P}(A) > 0$. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Ejemplo**\n",
+    "1. Suponga que un dado balanceado se tira una vez. Use probabilidad condicional para hallar la probabilidad de un 1, dado que se obtuvo un número impar.\n",
+    "\n",
+    "2. La probabilidad de que un vuelo programado normalmente salga a tiempo es $P(D)=0.83$, la probabilidad de que llegue a tiempo es $P(A)=0.82$ y la probabilidad de que salga y llegue a tiempo es $P(D\\cap A) = 0.78$. \n",
+    "\n",
+    "    Calcule la probabilidad de que un avión\t\n",
+    "\n",
+    "    a. llegue a tiempo, dado que salió a tiempo; \n",
+    "\n",
+    "    b. salió a tiempo, dado que llegó a tiempo; \n",
+    "    \n",
+    "    c. llegó a tiempo, dado que no salió a tiempo.\n",
+    "    \n",
+    "     Resp. a) 0.94, b) 0.95 y c) 0.24."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Ejercicios**\n",
+    "1. Considere un proceso industrial en el ramo textil, en el que se producen listones de una tela específica. Los listones pueden resultar con defectos en dos de sus características: la longitud y la textura. En el segundo caso el proceso de identificación es muy complicado. A partir de información histórica del proceso se sabe que 10\\% de los listones no pasan la prueba de longitud, que 5\\% no pasan la prueba de textura y que sólo 0.8\\% no pasan ninguna de las dos pruebas. Si en el proceso se elige un listón al azar y una medición rápida identifica que no pasa la prueba de longitud, ¿cuál es la probabilidad de que la textura esté defectuosa? R: 0.08\n",
+    "\n",
+    "2. Un grupo de estudiantes de probabilidad avanzada se compone de 10 alumnos de primer año, 30 del último año y 10 graduados. Las calificaciones finales muestran que 3 estudiantes de primer año, 10 del último año y 5 de los graduados obtuvieron 10 en el curso. Si se elige un estudiante al azar de este grupo y se descubre que es uno de los que obtuvieron 10 de calificación, ¿cuál es la probabilidad de que sea un estudiante de último año? \n",
+    "\n",
+    "    Resp. 5/9."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La probabilidad condicional cumple con las siguientes condiciones:\n",
+    "\n",
+    "1.   $\\mathbb{P}(A\\vert A) = 1$\n",
+    "2.   $\\mathbb{P}(A^c\\vert B) = 1 - \\mathbb{P}(A\\vert B)$, siendo $A^c$ el complemento.\n",
+    "3.   $\\mathbb{P}(A \\cap B \\vert C) = \\mathbb{P}(A\\vert B\\cap C)\\cdot \\mathbb{P}(B \\vert C)$\n",
+    "4.   $\\mathbb{P}(A \\cap B \\cap C) = \\mathbb{P}(C \\vert A \\cap B)\\cdot \\mathbb{P}(A \\cap B)$\n",
+    "\n",
+    "Veamos un ejemplo práctico de la cuarta propiedad de la probabilidad condicional"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Ejemplo**\n",
+    "Se tiene una caja con 12 bolas, de los cuales 3 son de color negro y 9 son de color azul. Se seleccionan 3 bolas de forma aleatoria sin repetir de nuevo una nueva selección. ¿Cuál es la probabilidad que la bola sea azul, la segunda bola sea también azul y la tercera bola sea negra?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probabilidad del intento 1 =  0.75\n",
+      "Probabilidad del intento 2 =  0.7272727272727273\n",
+      "Probabilidad del intento 3 =  0.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Evento A es una bola azul\n",
+    "# Evento B es una bola azul\n",
+    "# Evento C es una bola negra\n",
+    "\n",
+    "N = 12 # 12 Bolas en total\n",
+    "N_A = 9 # 9 bolas azul\n",
+    "N_N = 3 # 3 bolas negras\n",
+    "P_A = N_A/N # Probabilidad que salga bola de color azul en el primer intento\n",
+    "\n",
+    "# Si se descarta una bola azul en el segundo intento entonces...\n",
+    "\n",
+    "P_B_cond_A = (N_A - 1)/(N - 1)\n",
+    "\n",
+    "# Si se descarta dos bolas para salga azul, entonces...\n",
+    "\n",
+    "P_C_cond_A_cap_B = N_N/(N - 2)\n",
+    "\n",
+    "print(\"Probabilidad del intento 1 = \", P_A)\n",
+    "print(\"Probabilidad del intento 2 = \", P_B_cond_A)\n",
+    "print(\"Probabilidad del intento 3 = \", P_C_cond_A_cap_B)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como $\\mathbb{P}(B\\vert A) = \\frac{\\mathbb{P}(A \\cap B)}{\\mathbb{P}(A)}$, entonces se puede decir que:\n",
+    "\n",
+    "$$\\mathbb{P}(A \\cap B) = \\mathbb{P}(B\\vert A)\\cdot \\mathbb{P}(A)$$\n",
+    "\n",
+    "Por consiguiente:\n",
+    "\n",
+    "$$\\mathbb{P}(A \\cap B \\cap C) = \\mathbb{P}(C \\vert A \\cap B)\\cdot \\mathbb{P}(B\\vert A)\\cdot \\mathbb{P}(A)$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La probabilidad que la bola sea azul en el intento 1, azul en el intento 2 y negra en el intento 3 es = 0.164\n"
+     ]
+    }
+   ],
+   "source": [
+    "P_A_cap_B_cap_C = P_C_cond_A_cap_B * P_B_cond_A * P_A\n",
+    "print(\"La probabilidad que la bola sea azul en el intento 1, azul en el intento 2 y negra en el intento 3 es = {:.3f}\".format(P_A_cap_B_cap_C))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Eventos independientes**\n",
+    "\n",
+    "**Definición**\n",
+    "Se dice que dos eventos $ A $ y $ B $ son independientes si se cumple cualquiera de los siguientes casos:\n",
+    "\t\t\n",
+    "$$P(A|B)=P(A),\\quad P(B|A)=P(B)$$\n",
+    "$$P(A\\cap B)=P(A)P(B)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Veamos un ejemplo práctico"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A = evento que la moneda salga cara\n",
+    "# B = evento que la moneda salga sello.\n",
+    "\n",
+    "P_A = 0.5 # Probabilidad que salga cara.\n",
+    "P_B = 0.5 # Probabilidad que salga sello.\n",
+    "\n",
+    "P_A_cap_B = P_A * P_B\n",
+    "\n",
+    "print(\"Probabilidad que A y B sean independientes es = {:.3f}\".format(P_A_cap_B))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como la probabilidad es de $0.25$, y como se busca que $\\mathbb{P}(A \\cap B) = 0$, entonces $A$ y $B$ no son independientes entre sí."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
