--- a/02-Probabilidad.ipynb
+++ b/02-Probabilidad.ipynb
@@ -745,11 +745,113 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## **Teorema de la probabilidad total y de Bayes**\n",
+    "\n",
+    "El teorema de la probabilidad total permite establecer una suma de particiones del espacio muestral y de cualquier evento. En este caso, consideramos $B$ como las particiones del espacio muestral $\\Omega$ y $D$ es cualquier evento:\n",
+    "\n",
+    "$$\\mathbb{P}(D) = \\mathbb{P}(D \\cap B_1) + \\mathbb{P}(D \\cap B_2) + \\ldots + \\mathbb{P}(D \\cap B_i) + \\ldots$$\n",
+    "\n",
+    "La anterior expresión se puede presentar mediante probabilidades condicionales:\n",
+    "\n",
+    "$$\\mathbb{P}(D) = \\mathbb{P}(D \\vert B_1)\\cdot\\mathbb{P}(B_1) + \\mathbb{P}(D \\vert B_2)\\cdot\\mathbb{P}(B_2) + \\ldots + \\mathbb{P}(D \\vert B_i)\\cdot\\mathbb{P}(B_i) + \\ldots$$\n",
+    "\n",
+    "Y por consiguiente, se puede reescribir la probabilidad total como:\n",
+    "\n",
+    "$$\\mathbb{P}(D) = \\sum_{i \\geq 1} \\mathbb{P}(D \\vert B_i)\\cdot\\mathbb{P}(B_i)$$\n",
+    "\n",
+    "A partir de la expresión de la probabilidad total, se define el teorema de Bayes como sigue:\n",
+    "\n",
+    "Considere que se conoce que un evento $D$ ya ocurrio, si se desea conocer la probabilidad que haya ocurrido en el evento de la partición $B_i$, se establece que:\n",
+    "\n",
+    "$$\\mathbb{P}(B_i \\vert D) = \\frac{\\mathbb{P}(D\\cap B_i)}{\\mathbb{P}(D)} = \\frac{\\mathbb{P}(D \\vert B_i)\\cdot \\mathbb{P}(B_i)}{\\sum_{i \\geq 1} \\mathbb{P}(D \\vert B_i)\\cdot\\mathbb{P}(B_i)}$$\n",
+    "\n",
+    "Veamos un ejemplo práctico del teorema de Bayes.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Ejemplo:** \n",
+    "En una fábrica, hay tres máquinas que llamaremos $A$, $B$ y $C$ que producen el $45\\%$, $30\\%$ y $25\\%$ del total de piezas producidas por día. Sin embargo, se estiman que los porcentajes de producción de piezas defectuosas por las tres máquinas son $3\\%$, $4\\%$ y $5\\%$, respectivamente. Si se seleccional al azar una de las piezas y resulta defectuosa, cuál máquina tiene mayor probabilidad de generar piezas defectuosas?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La probabilidad de generar piezas defectuosas en la máquina A es 0.355\n",
+      "La probabilidad de generar piezas defectuosas en la máquina B es 0.316\n",
+      "La probabilidad de generar piezas defectuosas en la máquina C es 0.329\n"
+     ]
+    }
+   ],
+   "source": [
+    "P_A = 0.45\n",
+    "P_B = 0.3\n",
+    "P_C = 0.25\n",
+    "\n",
+    "P_D_cond_A = 0.03\n",
+    "P_D_cond_B = 0.04\n",
+    "P_D_cond_C = 0.05\n",
+    "\n",
+    "P_TOTAL = (P_D_cond_A * P_A) + (P_D_cond_B * P_B) + (P_D_cond_C * P_C)\n",
+    "\n",
+    "P_A_cond_D = (P_D_cond_A * P_A) / P_TOTAL\n",
+    "P_B_cond_D = (P_D_cond_B * P_B) / P_TOTAL\n",
+    "P_C_cond_D = (P_D_cond_C * P_C) / P_TOTAL\n",
+    "\n",
+    "print(\"La probabilidad de generar piezas defectuosas en la máquina A es {:.3f}\".format(P_A_cond_D))\n",
+    "print(\"La probabilidad de generar piezas defectuosas en la máquina B es {:.3f}\".format(P_B_cond_D))\n",
+    "print(\"La probabilidad de generar piezas defectuosas en la máquina C es {:.3f}\".format(P_C_cond_D))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Por consiguiente, la máquina $A$ tiene mayor probabilidad de generar piezas defectuosas, con una probabilidad de $0.355$ ($35.5\\%$ en el lenguaje común)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Ejemplos**\n",
+    "1. Tres máquinas de cierta planta de ensamble, $B_1$ , $B_2$ y $B_3$ , montan 30\\%, 45\\% y 25\\% de los productos, respectivamente. Se sabe por experiencia que 2\\%, 3\\% y 2\\% de los productos ensamblados por cada máquina, respectivamente, tienen defectos. Ahora bien, suponga que se selecciona de forma aleatoria un producto terminado. ¿Cuál es la probabilidad de que esté defectuoso? \n",
+    "Resp. 0.0245\n",
+    "2. Continuando con el problema anterior. Si se elige al azar un producto y se encuentra que está defectuoso, ¿cuál es la probabilidad de que haya sido ensamblado con la máquina $B_3$? \n",
+    "Resp. 0.2040"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Ejercicios**\n",
+    "1. Una población de electores contiene 40\\% de republicanos y 60\\% de demócratas. Se publica que 30\\% de los republicanos y 70\\% de los demócratas están a favor de un tema de elección. Se encuentra que una persona seleccionada al azar de esta población está a favor del tema en cuestión. Encuentre la probabilidad condicional de que esta persona sea un demócrata. \n",
+    "\n",
+    "    Resp. 0.7777\n",
+    "\n",
+    "2. Se observa que hombres y mujeres reaccionan de modo diferente a un conjunto determinado de circunstancias; se sabe que 70\\% de las mujeres reaccionan positivamente a estas circunstancias mientras que de este mismo modo reaccionan sólo 40\\% de los hombres. Un grupo de 20 personas, 15 mujeres y 5 hombres, se sometió a estas circunstancias y a los sujetos se les pidió describieran sus reacciones en un cuestionario escrito. Una respuesta escogida al azar de las 20 fue negativa. ¿Cuál es la probabilidad de que haya sido de un hombre?\n",
+    "\n",
+    "    Resp. 0.4\n",
+    "3. Un estudio de residentes de Georgia sugiere que quienes trabajaron en astilleros durante la Segunda Guerra Mundial fueron sometidos a un riesgo considerablemente más alto de cáncer pulmonar (Wall\tStreet Journal, 21 de septiembre de 1978). Se encontró que alrededor de 22\\% de quienes tuvieron cáncer pulmonar trabajaron en un tiempo en un astillero. En contraste, sólo 14\\% de quienes no tuvieron cáncer pulmonar trabajaron en un astillero. Suponga que la proporción de todos los nativos de Georgia que vivieron durante la Segunda Guerra Mundial que han contraído o contraerán cáncer pulmonar es 0.04\\%. Encuentre el porcentaje de georgianos que vivieron durante el mismo periodo que contraerán (o ya han contraído) cáncer pulmonar, dado que en algún tiempo han trabajado en un astillero. \n",
+    "\n",
+    "    Resp. 6.28x$ 10^{-4} $.\n",
+    "\n",
+    "4. En cierta región del país se sabe por experiencia que la probabilidad de seleccionar un adulto mayor de 40 años de edad con cáncer es 0.05. Si la probabilidad de que un doctor diagnostique de forma correcta que una persona con cáncer tiene la enfermedad es 0.78, y la probabilidad de que diagnostique de forma incorrecta que una persona sin cáncer tiene la enfermedad es 0.06, ¿cuál es la probabilidad de que a un adulto mayor de 40 años se le diagnostique cáncer?, ¿cuál es la probabilidad de que una persona a la que se le diagnostica cáncer realmente tenga la enfermedad? \n",
+    "\n",
+    "    Resp. 0.0954 y 0.4088."
+   ]
   }
  ],
  "metadata": {
