--- a/04-Introduccion_Variables_aleatorias.ipynb
+++ b/04-Introduccion_Variables_aleatorias.ipynb
@@ -1461,7 +1461,7 @@
         "id": "7s8UBRjJfyAF"
       },
       "source": [
-        "## Función de distribución Binomial"
+        "## **Función de distribución Binomial**"
       ]
     },
     {
@@ -1654,99 +1654,10 @@
       "cell_type": "markdown",
       "metadata": {
         "colab_type": "text",
-        "id": "8FNOsqpONkdH"
-      },
-      "source": [
-        "### Test Binomial"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "Eo90nFn-Nqf7"
-      },
-      "source": [
-        "El test binomial es una prueba que desde los datos de una muestra permite determinar si la proporción de la población para una variable binaria es igual a un valor específico. Por ejemplo, un test binomial podría ser ver si la proporción de ingenieros de una empresa tienen habilidades de programación es igual $0.65$, lo cual es el valor esperado de la media de un modelo que analiza este tipo de escenario.\n",
-        "\n",
-        "El test binomial calcula la probabilidad de obtener de un tamaño de muestra específico, $n$, el número de resultados esperados, que para este caso, seria el número de ingenieros con habilidades de programación. Por lo general, en el test binomial depende del cálculo de la función de masa de probabilidad binomial, $X \\sim Bin(n,\\rho)$.\n",
-        "\n",
-        "Veamos un ejemplo práctico de este test.\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "FWGh22gq4k9D"
-      },
-      "source": [
-        "Consideremos el siguiente problema: \"Una empresa de desarrollo de Software dice que no más del 25% de las pruebas de calidad del software son ineficientes. Para 15 productos de software que son analizados, se encontraron que 5 productos de software son ineficientes. No obstante, varios expertos en ingeniería de software determinaron que puede haber 50%, 75% o inclusive 90% de sofware ineficientes debido a los cambios de personal que ha sufrido la empresa en los últimos dos años. Quiénes tendrán la razón?\""
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 32,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 90
-        },
-        "colab_type": "code",
-        "id": "hYI9kxts2bit",
-        "outputId": "382d4c5f-7065-43ce-f826-52c2c3f0f88b"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Valor de la prueba binomial con p = 0.25 es = 0.54960187\n",
-            "Valor de la prueba binomial con p = 0.50 es = 0.30175781\n",
-            "Valor de la prueba binomial con p = 0.75 es = 0.00079495\n",
-            "Valor de la prueba binomial con p = 0.90 es = 0.00000019\n"
-          ]
-        }
-      ],
-      "source": [
-        "from scipy.stats import binom_test\n",
-        "import numpy as np\n",
-        "\n",
-        "x = 5\n",
-        "p1, p2, p3, p4 = 0.25, 0.5, 0.75, 0.9\n",
-        "n = 15\n",
-        "\n",
-        "valor_1 = binom_test(x, n, p = p1)\n",
-        "valor_2 = binom_test(x, n, p = p2)\n",
-        "valor_3 = binom_test(x, n, p = p3)\n",
-        "valor_4 = binom_test(x, n, p = p4)\n",
-        "\n",
-        "print(\"Valor de la prueba binomial con p = {:.2f} es = {:.8f}\".format(p1,valor_1))\n",
-        "print(\"Valor de la prueba binomial con p = {:.2f} es = {:.8f}\".format(p2,valor_2))\n",
-        "print(\"Valor de la prueba binomial con p = {:.2f} es = {:.8f}\".format(p3,valor_3))\n",
-        "print(\"Valor de la prueba binomial con p = {:.2f} es = {:.8f}\".format(p4,valor_4))"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "P3GMYABt64r3"
-      },
-      "source": [
-        "Si consideramos un umbral de decisión de $0.05$ que es lo mismo que decir que hay 5% de desconfianza en los expertos, se determina que los expertos 1 y 2 no tienen razón en su afirmación mientras que los expertos 3 y 4 tienen razón en afirmar que entre el 75% y el 90% de los productos de software tienen problemas de clalidad.\n",
-        "\n",
-        "En la unidad 3, analizaremos a profunidad los test estadísticos."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
         "id": "4paUpeh2Fgn-"
       },
       "source": [
-        "## Función de distribución binomial negativa"
+        "## **Función de distribución binomial negativa**"
       ]
     },
     {
@@ -1770,11 +1681,31 @@
         "\n",
         "La media y la varianza de esta distribución están dados por:\n",
         "\n",
-        "$$\\mu = n\\left( \\frac{1-\\rho}{\\rho} \\right )$$\n",
+        "$$\\mu =  \\frac{n}{\\rho}$$\n",
         "\n",
         "$$\\sigma^2 = \\frac{n(1-\\rho)}{\\rho^2}$$\n",
         "\n",
         "Veamos un ejemplo práctico de esta distribución"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "12.0"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "3*(0.8/0.2)"
       ]
     },
     {
@@ -1931,87 +1862,10 @@
       "cell_type": "markdown",
       "metadata": {
         "colab_type": "text",
-        "id": "iZgblzD7ToV4"
-      },
-      "source": [
-        "### Test Binomial Negativa"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "D6aBvgpNTsK1"
-      },
-      "source": [
-        "El test binomial negativa esta basado en el test Binomial estándar pero se debe considerar dos muestras: número de éxitos y número de fracasos. Veamos un ejemplo práctico de este test"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "MCMzQxtSUtHh"
-      },
-      "source": [
-        "Consideremos el siguiente problema: \"Un ciudadano colombiano tiene un negocio de empánadas que produce 200 empanadas en tres horas. De las 200 empanadas, hay 8 empanadas deliciosas y 2 empanadas regulares por cada 10 empanadas que produce en nueve minutos. Sin embargo, en una encuesta a los consumidores, dicen que de las empanadas que comen lunes a viernes, hay aproximadamente 10% o 60% de las empanadas que tienen un sabor regular\"\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 35,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 54
-        },
-        "colab_type": "code",
-        "id": "0l0Ygmf7Unfx",
-        "outputId": "52fe669f-a6e9-47e9-d68d-4c1d4b6ace07"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Valor de la prueba binomial negativa con p = 0.10 es = 0.00000037\n",
-            "Valor de la prueba binomial negativa con p = 0.60 es = 0.33352837\n"
-          ]
-        }
-      ],
-      "source": [
-        "from scipy.stats import binom_test\n",
-        "import numpy as np\n",
-        "\n",
-        "xe, xf = 8, 2\n",
-        "p1, p2 = 0.1, 0.6\n",
-        "n = 10\n",
-        "\n",
-        "valor_1 = binom_test([xe,xf], n, p = p1)\n",
-        "valor_2 = binom_test([xe,xf], n, p = p2)\n",
-        "\n",
-        "print(\"Valor de la prueba binomial negativa con p = {:.2f} es = {:.8f}\".format(p1,valor_1))\n",
-        "print(\"Valor de la prueba binomial negativa con p = {:.2f} es = {:.8f}\".format(p2,valor_2))"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "GyY9NFovW8yT"
-      },
-      "source": [
-        "Si consideramos un umbral de decisión de $0.05$, observen que el primer caso tiene un valor menor $0.05$ y por consiguiente, hay alrededor de 10% de las empanadas que pueden salir regulares. Por otra parte, el segundo caso tiene un valor mayor a $0.05$, lo cual se rechaza la hipótesis que el 60% de las empanadas salgan regulares."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
         "id": "76jHo4-dZC4w"
       },
       "source": [
-        "## Función de distribución Geométrica"
+        "## **Función de distribución Geométrica**"
       ]
     },
     {
@@ -2194,7 +2048,7 @@
         "id": "sZNWaTlIdQMr"
       },
       "source": [
-        "## Función de distribución Hipergeométrica"
+        "## **Función de distribución Hipergeométrica**"
       ]
     },
     {
@@ -2367,7 +2221,7 @@
         "id": "Q1AmkAfTD0uj"
       },
       "source": [
-        "## Función de distribución de probabilidad Poisson"
+        "## **Función de distribución de probabilidad Poisson**"
       ]
     },
     {
