--- a/04-Introduccion_Variables_aleatorias.ipynb
+++ b/04-Introduccion_Variables_aleatorias.ipynb
@@ -7,7 +7,12 @@
         "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/alfonsocude/Probability/blob/main/04-Introduccion_Variables_aleatorias.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/alfonsocude/Probability/blob/main/04-Introduccion_Variables_aleatorias.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
+        "\n",
+        "\n",
+        "**Recuerda que una vez abierto, Da clic en \"Copiar en Drive\", de lo contrario no podras almancenar tu progreso**\n",
+        "\n",
+        "Nota: no olvide ir ejecutando las celdas de código de arriba hacia abajo para que no tenga errores de importación de librerías o por falta de definición de variables."
       ]
     },
     {
@@ -32,7 +37,7 @@
         "id": "5vIVORbONckG"
       },
       "source": [
-        "# **Introducción a las Variables Aleatorias**\n"
+        "# **Variables Aleatorias**\n"
       ]
     },
     {
@@ -42,7 +47,7 @@
         "id": "pPwI_rfeQv7I"
       },
       "source": [
-        "# Variable aleatoria"
+        "## **Variable aleatoria**"
       ]
     },
     {
@@ -3463,7 +3468,9 @@
       "metadata": {},
       "source": [
         "### **Ejemplo**\n",
-        "La resistencia a la ruptura del vidrio templado promedia 14 (medida en miles de libras por pulgada \tcuadrada) y tiene una desviación estándar de 2. ¿Cuál es la probabilidad de que el promedio de resistencia a la ruptura de 100 piezas seleccionadas aleatoriamente de este vidrio exceda de 14.5?"
+        "La resistencia a la ruptura del vidrio templado promedia 14 (medida en miles de libras por pulgada \tcuadrada) y tiene una desviación estándar de 2. ¿Cuál es la probabilidad de que el promedio de resistencia a la ruptura de 100 piezas seleccionadas aleatoriamente de este vidrio exceda de 14.5?\n",
+        "\n",
+        "*Resp. 0.0062*"
       ]
     },
     {
@@ -3478,7 +3485,9 @@
       "metadata": {},
       "source": [
         "### **Ejemplo**\n",
-        "Si cierta máquina fabrica resistencias eléctricas que tienen una resistencia media de 40 ohms y una desviación estándar de 2 ohms, ¿cuál es la probabilidad de que una muestra aleatoria de 36 de estas resistencias tenga una resistencia combinada de más de 1458 ohms?"
+        "Si cierta máquina fabrica resistencias eléctricas que tienen una resistencia media de 40 ohms y una desviación estándar de 2 ohms, ¿cuál es la probabilidad de que una muestra aleatoria de 36 de estas resistencias tenga una resistencia combinada de más de 1458 ohms?\n",
+        "\n",
+        "*Resp. 0.0668*"
       ]
     },
     {
